# RCC_GiovanyExilus

dev/pico/: CMakeLists.txt  targetfound1.uf2
dev/pico/challenges/01-arrays/0-random-longs/: 0-random-longs.cpp
dev/pico/challenges/03-sensor1/solutions/02-button/: 01-blink-with-button.cpp
dev/pico/challenges/03-sensor1/solutions/03-motor/: motor-characterization.cpp
dev/pico/challenges/03-sensor1/solutions/06-autonomous/: 03-target-found.cpp
dev/pico/challenges/04-sensor2/in-class-example/: integrator.cpp
dev/pico/challenges/05-statemachines/template/: sm-template.cpp
dev/pico/exercises/: 01-hitthebrakes.cpp  01-sodom-stop200.cpp  02-followobject.cpp  02-lidar-spinning.cpp  02-odom-straight-for-200.cpp  02.cpp  03-odom-scaled.cpp  03.cpp  04-driving-functions.cpp  04.cpp  06-rotate-robot.cpp  07-rotate-functions.cpp  08-forward-functions.cpp  09-pathfollowing.cpp  1-lidar-spinning.cpp  Encoders.cpp  FinalProject.cpp  LidarSensors.cpp  MotorCharacterization.cpp  PushButton_Challenges.cpp  Raft-input-sensors.cpp  avoid_wall.cpp  blink_led.cpp  counts-per-rotation.cpp  drive_straight.cpp  imu.cpp  servomotors.cpp  test_blink.cpp
dev/pico/lessons/01/: helloworld.cpp
dev/pico/lessons/01/02/: Syntax.cpp
dev/pico/python/: test.py
dev/pico/tests/: dist_control.cpp
